[package]
name = "hasher"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.1"
indicatif = { version = "0.17.8", features = ["rayon"] }
nalgebra = "0.32.5"
rayon = "1.10.0"

[profile.release]
lto = true
target-cpu = "native"